# nutrition_calculator

./: CMakeLists.txt  README.md  build.sh  build_config.sh  build_config_release.sh  clean_with_deps.sh  deploy.sh  deps_scenario.sh  external_config.sh  main.cpp  sync_resources.sh  update_scripts.sh
include/: authenticator.h  downloader.h  http_client.h  item.h  uploader.h
serverside/: serverside_config.sh  setup_environment.sh  ssh.sh
serverside/nutrition_calculator/: a.php  h.php  item_info.txt  l.php  s.php  u.php
src/: authenticator.cpp  downloader.cpp  http_client.cpp  item.cpp  uploader.cpp
